[panel] Fix overflow

--- a/src/components/panel/style/panel.scss
+++ b/src/components/panel/style/panel.scss
@@ -36,6 +36,7 @@ $panel-border-size:3px;
     [data-focus='panel-content'] {
         &.mdl-card__supporting-text {
             width: auto;
+            overflow: inherit;
         }
     }
 
